--- a/templates/profile.hbs
+++ b/templates/profile.hbs
@@ -107,7 +107,7 @@
                 <div class="container-right-text">
                     <h3 class="container-right-head">
                         Education information
-                        <i class="fas fa-book-open"></i>
+                       <i class="fas fa-book-reader"></i>
                     </h3>
                     <div class="content-info">
                         <div class="info-icon">
