--- a/templates/partials/nav.hbs
+++ b/templates/partials/nav.hbs
@@ -14,15 +14,14 @@
                 <span>{{login.profileName}}</span>
             </div>
         </a><!--SIGN-IN-->
-        <a class="nav-link nav-bell" href="javascript:void(0)" title="notification">
+        {{!-- <a id="notification-btn" class="nav-link nav-bell" href="javascript:void(0)" title="notification">
             <i class="fas fa-bell"></i> {{#if login.notification}}<span>{{login.notification}}</span>{{/if}}
-            </a>
+            </a> --}}
         <a class="nav-link-signup" href="/signout">Sign-Out</a><!--Sign-Up-->
         {{else}}
         <a class="nav-link" href="/about">ABOUT</a>
         <a class="nav-link" href="/login">SIGN-IN</a><!--SIGN-IN-->
         <a class="nav-link-signup" href="/signup">Sign-Up</a><!--Sign-Up-->
         {{/if}}
-        
     </div>
 </nav>
