--- a/templates/feed.hbs
+++ b/templates/feed.hbs
@@ -156,7 +156,7 @@
                         {{else}}
                         <a style="border-left: 2px solid #dc3545; " class="nav-list-jobs" href="/jobs/search-job">
                             <li style="list-style-type: none">
-                                <h4 style="color: #dc3545;;">There is no post to be displayed</h4>
+                                <h4 style="color: #dc3545;;">There is no jobs to be displayed</h4>
                             </li>
                         </a>
                         {{/if}}
