--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -64,7 +64,7 @@
             <h2 id="feature2">Let the right people know you're open to WORK</h2>
             <p id="para1"><b> With the Open To Work feature, you can privately tell recruiters or publicly share with
                     the
-                    LinkedIn community that you are looking for new job opportunities </b></p>
+                    SteerJobs community that you are looking for new job opportunities </b></p>
         </div>
         <div class="picture">
             <img src="https://static-exp1.licdn.com/sc/h/dkfub4sc7jgzg3o31flfr91rv"
